--- a/rasa/core/channels/chat.html
+++ b/rasa/core/channels/chat.html
@@ -12,6 +12,8 @@
 </div>
 make sure to replace <code>https://example.com/</code> with the URL of your server
 running your bot!
+To share your local prototype with someone, run
+<code><pre>rasa chat --share</pre></code>
 <div
         id="rasa-webchat-widget"
         data-websocket-url="ws://localhost:5005"
